sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ')' expected but '(' found.
def bubbleSort(liste:Array(Int))Array: {
                          ^AlgBubbleSort1:2: error: '=' expected but ')' found.
def bubbleSort(liste:Array(Int))Array: {
                               ^AlgBubbleSort1:17: error: illegal start of simple expression
}
^